--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,24 @@
   margin-bottom: 12px;
 }
 
+/* CSS for the table */
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
